--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
               Home Page
          </title>
          <meta name="viewpoint" content="width=device-width, initial-scale=1.0, maxium-scale=1.0">
-         <link href="Styles.css" rel="stylesheet" type="text/css">
+         <link href="Style.css" rel="stylesheet" type="text/css">
 
      </head>
      <body>
