--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           
             <main>
               <section class="hero-image">
-                <img src="img/logo.jpg" alt="bmw_motorrad_logo" />
+                <img src="https://www.bmw-motorrad.in/content/dam/bmwmotorradnsc/common/mnm/graphics/bmw_motorrad_logo.svg.asset.1585209612412.svg" alt="bmw_motorrad_logo" />
                 <div class="hero-marketing-bar">
                   <h3>Find your next</h3>
                   <h1>DREAM BIKE HERE</h1>
